# MIDIborg

./: README.md
Hardware/: #auto_saved_files#  MIDIborg-Edge_Cuts.gbr  MIDIborg-F_Cu.gbr  MIDIborg-job.gbrjob  MIDIborg.kicad_pcb  MIDIborg.kicad_prl  MIDIborg.kicad_pro  MIDIborg.kicad_sch  POWER_.kicad_sym  PowerSupply.kicad_sch  _autosave-MIDIborg.kicad_sch  sym-lib-table
Hardware/ComponentsLibrary/: Chips.kicad_sym  Memory_Flash.kicad_sym
Hardware/STM32CUBE/: STM32CUBE.ioc
Software/: README.txt
Software/arduinoSketch_MIDIborg/: arduinoSketch_MIDIborg.ino
Software/library_MCP23/: README.txt
Software/library_MCP23/MCP23S17/: MCP23S17.cpp
Software/picoMIDIborg/: CMakeLists.txt  main.c  picoMIDIborg.dis  picoMIDIborg.elf  picoMIDIborg.elf.map  picoMIDIborg.hex  picoMIDIborg.uf2
Software/picoMIDIborg/elf2uf2/: elf2uf2
Software/picoMIDIborg/include/: tusb_config.h
Software/picoMIDIborg/pico-sdk/src/rp2_common/boot_stage2/: bs2_default.dis  bs2_default_padded_checksummed.S
Software/subFolder/: README.txt
